# pdock

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
resources/: config  style.css
src/: main.rs
