[package]
name = "pdock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.6"
package = "gtk4"

[dependencies.gio]
version = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"
package = "gio"

[dependencies]
xdg = "2.5"
dirs = "5"
walkdir = "2"
serde_json = "1"